--- a/src/components/quickflow/qf-dental-chart.css
+++ b/src/components/quickflow/qf-dental-chart.css
@@ -22,7 +22,7 @@
 }
 
 .qf-tooth-wrap {
-  min-width: 2.875rem;
+  width: 100%;
   padding: 0.1875rem;
 }
 
